--- a/client/search-ui/src/components/atoms/ResultStatement.module.css
+++ b/client/search-ui/src/components/atoms/ResultStatement.module.css
@@ -2,4 +2,5 @@
     font-family: var(--vscode-editor-font-family);
     font-style: italic;
     color: var(--vscode-coq-proofViewText);
+    white-space: pre-wrap;
 }
